<resources>
    <string name="facebook_appID">799995593362533</string>
    <string name="app_name">خرائط القرآن</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">اعدادات</string>
    <string name="chooseSurah">من فضلك أختار السورة</string>
    <string name="generalMap">خريطة عامة</string>
    <string name="about">عن البرنامج</string>
    <string name="changeLanguage">تغير اللغة</string>
    <string name="noCurrentMapExist">لايوجد خريطة للسورة الحالية وسيتم اضافتها قريبا بأذن الله تابعونا على صفحة خرائط القرآن على الفيس بوك</string>
    <string name="noCurrentMapExist_TitleDialog">الخريطة غير متوفرة</string>
    <string name="alBaqarah_TitleDialog">أختار الجزء</string>
    <string name="menu_Details">تفاصيل</string>
    <string name="menu_share">مشاركة</string>
    <string name="menu_reset">الوضع الطبيعى</string>
    <string name="menu_about">عن البرنامج</string>
    <string name="menu_exit">خروج</string>
    <string name="menu_home">Home</string>
    <string name="menu_extract">أستخرج الى كارت الذاكرة</string>
    <string name="surahDescription">شرح السورة</string>
    <string name="moreInfoButton">معلومات اضافية عن السورة</string>
    <string name="title_activity_map_fullscreen">خريطة السورة</string>
    <string name="surahMapDescription">Map of selected surah</string>
    <string name="title_activity_surah_details">التفاصيل</string>
    <string name="title_activity_share">مشاركة</string>
    <string name="title_activity_about">عن خرائط القرآن</string>
    <string name="map_image_extracted">تم استخراج الخريطة الحالية لكارت الذاكرة </string>
    <string name="title_feature_Not_Available_Dialog">غير متوفرة</string>
    <string name="message_feature_Not_Available_Dialog">الخاصية المطلوبة غير متوفرة فى النسخة الحالية للأندرويد الحالى على هذا الجهاز</string>
    <string name="reasonOfNamingLabel">سبب تسمية السورة</string>
    <string name="goalOfSurahLabel">الهدف من السورة</string>
    <string name="quranMapGoalLableString">الهدف من خرائط القرآن</string>
    <string name="quranMapDescription">خرائط تبسط وتجمع المواضيع الاساسية في كل سورة
ممايعين القارئ على رسم الصورة الكلية للسورة
مماييسر عليه التدبر والحفظ والعمل</string>
    <string name="referancesLabelString">المراجع التى تم الاعتماد عليها فى بناء الخرائط</string>
    <string name="usefuLinksLabelString">مواقع مفيدة</string>
    <string name="facebookShareButton">شارك</string>
    <string name="show_internet_settings_dialog_title">اعدادت الانترنت</string>
    <string name="show_internet_settings_dialog_message">لا يوجد اتصال حالى بالانترنت و يجب ان تتصل بالانترنت لتتمكن من مشاركة خرائط سور القرآن هل تريد تشغيل الانترنت</string>
    <string name="show_internet_settings_dialog_positive_button">نعم</string>
    <string name="show_internet_settings_dialog_negative_button">لا</string>
    <string name="generalMapNameInEachLangauge">ar_all</string>
    <string name="generalMapURLOnFacebook">https://www.facebook.com/photo.php?fbid=394765480580902</string>
    <string-array name="allSurahNames">
        <item>أختر سورة</item>
        <item>الفاتحة</item>
        <item>البقرة</item>
        <item>آل عمران</item>
        <item>النساء</item>
        <item>المائدة</item>
        <item>الأنعام</item>
        <item>الأعراف</item>
        <item>الأنفال</item>
        <item>التوبة</item>
        <item>يونس</item>
        <item>هود</item>
        <item>يوسف</item>
        <item>الرعد</item>
        <item>إبراهيم</item>
        <item>الحجر</item>
        <item>النحل</item>
        <item>الإسراء</item>
        <item>الكهف</item>
        <item>مريم</item>
        <item>طه</item>
        <item>الأنبياء</item>
        <item>الحج</item>
        <item>المؤمنون</item>
        <item>النور</item>
        <item>الفرقان</item>
        <item>الشعراء</item>
        <item>النمل</item>
        <item>القصص</item>
        <item>العنكبوت</item>
        <item>الروم</item>
        <item>لقمان</item>
        <item>السجدة</item>
        <item>الأحزاب</item>
        <item>سبأ</item>
        <item>فاطر</item>
        <item>يس</item>
        <item>الصافات</item>
        <item>ص</item>
        <item>الزمر</item>
        <item>غافر</item>
        <item>فصلت</item>
        <item>الشورى</item>
        <item>الزخرف</item>
        <item>الدخان</item>
        <item>الجاثية</item>
        <item>الأحقاف</item>
        <item>محمد</item>
        <item>الفتح</item>
        <item>الحجرات</item>
        <item>ق</item>
        <item>الذاريات</item>
        <item>الطور</item>
        <item>النجم</item>
        <item>القمر</item>
        <item>الرحمن</item>
        <item>الواقعة</item>
        <item>الحديد</item>
        <item>المجادلة</item>
        <item>الحشر</item>
        <item>الممتحنة</item>
        <item>الصف</item>
        <item>الجمعة</item>
        <item>المنافقون</item>
        <item>التغابن</item>
        <item>الطلاق</item>
        <item>التحريم</item>
        <item>الملك</item>
        <item>القلم</item>
        <item>الحاقة</item>
        <item>المعارج</item>
        <item>نوح</item>
        <item>الجن</item>
        <item>المزمل</item>
        <item>المدثر</item>
        <item>القيامة</item>
        <item>الإنسان</item>
        <item>المرسلات</item>
        <item>النبأ</item>
        <item>النازعات</item>
        <item>عبس</item>
        <item>التكوير</item>
        <item>الإنفطار</item>
        <item>المطففين</item>
        <item>الإنشقاق</item>
        <item>البروج</item>
        <item>الطارق</item>
        <item>الأعلى</item>
        <item>الغاشية</item>
        <item>الفجر</item>
        <item>البلد</item>
        <item>الشمس</item>
        <item>الليل</item>
        <item>الضحى</item>
        <item>الشرح</item>
        <item>التين</item>
        <item>العلق</item>
        <item>القدر</item>
        <item>البينة</item>
        <item>الزلزلة</item>
        <item>العاديات</item>
        <item>القارعة</item>
        <item>التكاثر</item>
        <item>العصر</item>
        <item>الهمزة</item>
        <item>الفيل</item>
        <item>قريش</item>
        <item>الماعون</item>
        <item>الكوثر</item>
        <item>الكافرون</item>
        <item>النصر</item>
        <item>المسد</item>
        <item>الإخلاص</item>
        <item>الفلق</item>
        <item>الناس</item>
    </string-array>
    <string-array name="albaqarahList">
        <item>الاول</item>
        <item>الثانى</item>
        <item>الثالث</item>
        <item>السورة كاملة</item>
    </string-array>
    <string-array name="allLanguage">
        <item>أختار اللغة</item>
        <item>العربية (Arabic)</item>
        <item>English(الانجليزية)</item>
        <item>Français(الفرنسية)</item>
    </string-array>
    <string-array name="allLanguageAbbreviation">
        <item>ar</item>
        <item>en</item>
        <item>fr</item>
    </string-array>
</resources>