<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    

    
    
    <item
        android:id="@+id/details"
        android:icon="@drawable/details_light"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_Details"/>
    
    <item
        android:id="@+id/share"
        android:icon="@drawable/share_light"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_share"/>
  
     <item
        android:id="@+id/extract"
        android:icon="@drawable/extract_light"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_extract"/>
 
    
     <item
        android:id="@+id/reset"
        android:icon="@drawable/refresh_light"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_reset"/>
     
            
     <!--
     <item
        android:id="@+id/about"
        android:icon="@drawable/about_light"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_about"/>
    
       
       <item
        android:id="@+id/exit"
        android:icon="@drawable/exit_light"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_exit"/> 
     -->   
    
    
    
</menu>