<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapFullscreenActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <ImageView
        android:id="@+id/surahMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/surahMapDescription"
        android:gravity="center"
        android:keepScreenOn="true"
        android:src="@drawable/ar_all" 
        android:padding="5dp"/>
    
     <TextView
         android:id="@+id/surahDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:keepScreenOn="true"
         android:text="@string/surahDescription"
         android:textColor="#33b5e5" />
 

      
 
    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/moreInfoButton"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/moreInfoButton" />
        </LinearLayout>
    </FrameLayout>

</FrameLayout>